<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="com.example.android.cricketscorekeeper.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="@dimen/width_0dp_for_equal_weight_horizontally"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/TeamA_name_input"
                    style="@style/CodeEditText"
                    android:hint="@string/team_a_hint"
                    android:textAppearance="@style/CodeEditText" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/teamA_runs_score"
                        style="@style/CodeTextView"
                        android:layout_weight="1"
                        android:text="@string/team_a_runs" />

                    <View
                        android:layout_width="@dimen/view_layout_width"
                        android:layout_height="match_parent"
                        android:layout_marginTop="@dimen/view_marginTop"
                        android:background="@color/viewTextColor" />

                    <TextView
                        android:id="@+id/teamA_wickets"
                        style="@style/CodeTextView"
                        android:layout_weight="1"
                        android:text="@string/team_a_outs" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/CodeSmallTextTextView"
                        android:layout_weight="1"
                        android:text="@string/team_a_runs_text" />

                    <TextView
                        style="@style/CodeSmallTextTextView"
                        android:layout_weight="1"
                        android:text="@string/team_a_outs_text" />

                </LinearLayout>

                <Button
                    android:id="@+id/add_six_to_teamA"

                    android:text="@string/button_6_runs" />

                <Button
                    android:id="@+id/add_four_to_teamA"
                    style="@style/ButtonStyles"
                    android:text="@string/button_4_runs" />

                <Button
                    android:id="@+id/add_one_to_teamA"
                    style="@style/ButtonStyles"
                    android:text="@string/button_1_run" />

                <Button
                    android:id="@+id/add_one_out_for_TeamA"
                    style="@style/ButtonStyles"
                    android:text="@string/button_outs" />

            </LinearLayout>

            <View
                android:layout_width="@dimen/view_layout_width"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/center_view_marginTop"
                android:background="@color/viewTextColor" />

            <LinearLayout
                android:layout_width="@dimen/width_0dp_for_equal_weight_horizontally"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/TeamB_name_input"
                    style="@style/CodeEditText"
                    android:hint="@string/team_b_hint"
                    android:textAppearance="@style/CodeEditText" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/teamB_runs_score"
                        style="@style/CodeTextView"
                        android:layout_weight="1"
                        android:text="@string/team_b_runs"
                        android:textAppearance="@style/CodeTextView" />

                    <View
                        android:layout_width="@dimen/view_layout_width"
                        android:layout_height="match_parent"
                        android:layout_marginTop="@dimen/view_marginTop"
                        android:background="@color/viewTextColor" />

                    <TextView
                        android:id="@+id/teamB_wickets"
                        style="@style/CodeTextView"
                        android:layout_weight="1"
                        android:text="@string/team_b_outs" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/CodeSmallTextTextView"
                        android:layout_weight="1"
                        android:text="@string/team_b_runs_text" />

                    <TextView
                        style="@style/CodeSmallTextTextView"
                        android:layout_weight="1"
                        android:text="@string/team_b_outs_text" />

                </LinearLayout>

                <Button
                    android:id="@+id/add_six_to_teamB"
                    style="@style/ButtonStyles"
                    android:text="@string/button_6_runs" />

                <Button
                    android:id="@+id/add_four_to_teamB"
                    style="@style/ButtonStyles"
                    android:text="@string/button_4_runs" />

                <Button
                    android:id="@+id/add_one_to_teamB"
                    style="@style/ButtonStyles"
                    android:text="@string/button_1_run" />

                <Button
                    android:id="@+id/add_one_out_for_TeamB"
                    style="@style/ButtonStyles"
                    android:text="@string/button_outs" />

            </LinearLayout>
        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/undo_text_marginBottom"
            android:layout_weight="1"
            android:onClick="undo_last_action"
            android:text="@string/undo" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/undo_text_marginBottom"
            android:layout_weight="1"
            android:onClick="match_results"
            android:text="@string/results_button" />

        <TextView
            android:id="@+id/final_results"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/results_display_text_marginBottom"
            android:layout_weight="1"
            android:fontFamily="sans-serif-light"
            android:gravity="center_horizontal"
            android:text=""
            android:textColor="@color/results_display_TextColor"
            android:textSize="@dimen/results_display_text_size"
            android:textStyle="bold" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:onClick="Reset_to_zero"
            android:text="@string/reset_all" />
    </LinearLayout>
</ScrollView>
